--- a/net472/eShopLegacyMVC/eShopLegacyMVC.csproj
+++ b/net472/eShopLegacyMVC/eShopLegacyMVC.csproj
@@ -29,6 +29,7 @@
     <TargetFrameworkProfile />
     <Use64BitIISExpress />
     <TypeScriptToolsVersion>4.4</TypeScriptToolsVersion>
+    <_MigrateToProjectGuid>08c9feea-a792-47a5-b4cd-f4b7a5a1e49e</_MigrateToProjectGuid>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
