Added system.web.adapters to allow Utilities to be dotnetstandard2.0

--- a/net472/eShopLegacy.Utilities/eShopLegacy.Utilities.csproj
+++ b/net472/eShopLegacy.Utilities/eShopLegacy.Utilities.csproj
@@ -12,6 +12,7 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <_MigrateToProjectGuid>fbe353f5-68ec-4aea-8445-125b4524afc1</_MigrateToProjectGuid>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,6 +51,9 @@
       <Project>{c06afef4-f9ea-4c92-9a4f-335529727bc5}</Project>
       <Name>eShopLegacy.Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
