--- a/net472/eShopLegacyMVCCore/eShopLegacyMVCCore.csproj
+++ b/net472/eShopLegacyMVCCore/eShopLegacyMVCCore.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\eShopLegacy.Common\eShopLegacy.Common.csproj" />
+    <ProjectReference Include="..\eShopLegacy.UtilitiesCore\eShopLegacy.UtilitiesCore.csproj" />
   </ItemGroup>
 
 </Project>
