add shared sessions

--- a/net472/eShopLegacyMVCCore/appsettings.json
+++ b/net472/eShopLegacyMVCCore/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "CatalogDBContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Microsoft.eShopOnContainers.Services.CatalogDb;Integrated Security=True;MultipleActiveResultSets=True;"
   },
+  "RemoteAppApiKey": "66CD76D9-67A1-406F-BECE-344801121423",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
