--- a/net472/eShopLegacyMVC/packages.config
+++ b/net472/eShopLegacyMVC/packages.config
@@ -28,13 +28,24 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Cryptography.Internal" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.DataProtection" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.DataProtection.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.DataProtection.Extensions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.SystemWebAdapters" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.SystemWebAdapters.Abstractions" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.SystemWebAdapters.FrameworkServices" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="6.0.0" targetFramework="net472" />
@@ -46,8 +57,10 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Cookies" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Interop" version="2.1.38" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
+  <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
@@ -64,6 +77,10 @@
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Xml" version="4.5.0" targetFramework="net472" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net472" />
   <package id="System.Text.Json" version="6.0.0" targetFramework="net472" />
   <package id="System.Threading.Channels" version="4.5.0" targetFramework="net472" />
